--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,7 +2,7 @@ footer {
   width: 100%;
   height: 45px;
   color: #fff;
-  background-color: #353535;
+  background-color: #4a4a4a;
   overflow: hidden;
   display: flex;
   margin-top: 70px;
@@ -44,8 +44,11 @@ footer {
 
 
 @media all and (max-width: 480px) {
-  footer p,
-  footer a {
-    font-size: 11px;
+  footer p {
+    font-size: 14px;
+  }
+
+  .built {
+    display: none;
   }
 }
