--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -53,5 +53,10 @@ header {
   header .menu {
     margin: 0 auto;
     justify-content: space-between;
+    padding: 0;
+
+    li {
+      font-size: 15px;
+    }
   }
 }
