--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -20,10 +20,12 @@
 
   p {
     margin: 0;
+    line-height: 1.9;
   }
 
   > div {
     margin-top: 10px;
+    margin-right: 10px;
   }
 
   p a {
@@ -46,12 +48,13 @@
   }
 
   .social img {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+    margin-top: 5px;
   }
 
   .social .github img {
-    width: 26px;
+    width: 34px;
   }
 }
 
