--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,7 +1,7 @@
 header {
-  height:  85px;;
+  height:  60px;;
   color: #fff;
-  background-color: #4a4a4a;
+  background-color: #2d2d2d;
 
   .grid {
     display: flex;
