--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -10,7 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   scroll-behavior: smooth;
   line-height: 1.6;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 400;
 }
 
@@ -47,10 +47,10 @@ h5 {
 }
 
 a {
-  color: #3367d6;
+  color: #5183f5;
   display: inline-block;
   font-weight: 500;
-  text-decoration: #3367d6 solid underline;
+  text-decoration: #5183f5 solid underline;
   text-underline-position: under;
 
   &:hover {
