--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import "./card.scss";
 @import "./spinner.scss";
 @import "./opensources.scss";
+@import "./book.scss";
 @import "./posts.scss";
 @import "~prismjs/themes/prism-okaidia.css";
 @import "./overrides.scss";
