--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,7 +2,8 @@ footer {
 	width: 100%;
 	height: 45px;
 	color: #fff;
-	background-color: #1c2129;
+	background-color: #1f1f1f;
+	border-top: 1px solid#2f2f2f;
 	overflow: hidden;
 	display: flex;
 	margin-top: 40px;
