--- a/src/styles/posts.scss
+++ b/src/styles/posts.scss
@@ -36,16 +36,34 @@
 .posts {
   margin-bottom: 60px;
 
+  &__title,
+  .post__year-title {
+    color: tomato;
+  }
+
   .post {
     margin-bottom: 30px;
   }
 
   .post h4 {
     margin-bottom: 5px;
+
+    a {
+      color: inherit;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 25px;
+
+      &:hover {
+        color: #2196f3;
+        text-decoration: underline;
+      }
+    }
   }
 
   .post p {
     margin-top: 8px;
+    margin-bottom: 8px;
   }
 }
 
