--- a/src/styles/book.scss
+++ b/src/styles/book.scss
@@ -21,6 +21,13 @@
 	line-height: 1.6;
 	color: var(--color-white);
 
+	h1 {
+		a {
+			text-decoration: none;
+			color: inherit;
+		}
+	}
+
 
 	.header-section {
 		padding-top: 20px;
