--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,127 +1,127 @@
 header {
-	height: 60px;
-	color: #fff;
-	background-color: #1f1f1f;
-	border-bottom: 1px solid #2f2f2f;
+  height: 60px;
+  color: #fff;
+  background-color: #1f1f1f;
+  border-bottom: 1px solid #2f2f2f;
 
-	.grid {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		width: 1080px;
-	}
+  .grid {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 1080px;
+  }
 
-	h1 {
-		font-size: 22px;
+  h1 {
+    font-size: 22px;
 
-		a {
-			text-decoration: none;
-			color: inherit;
-		}
-	}
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
 
-	.theme-switcher {
-		margin-top: 4px !important;
+  .theme-switcher {
+    display: flex;
+    align-items: center;
 
-		input[type=checkbox]{
-			height: 0;
-			width: 0;
-			visibility: hidden;
-		}
+    input[type="checkbox"] {
+      height: 0;
+      width: 0;
+      visibility: hidden;
+    }
 
-		label {
-			cursor: pointer;
-			text-indent: -9999px;
-		  width: 40px;
-  		height: 20px;
-			background: grey;
-			display: block;
-			border-radius: 100px;
-			position: relative;
-		}
+    label {
+      cursor: pointer;
+      text-indent: -9999px;
+      width: 36px;
+      height: 19px;
+      background: grey;
+      display: block;
+      border-radius: 100px;
+      position: relative;
+    }
 
-		label:after {
-			content: '';
-			position: absolute;
-			top: 1px;
-			left: 0;
-			width: 18px;
-			height: 18px;
-			background: #fff;
-			border-radius: 90px;
-			transition: 0.3s;
-		}
+    label:after {
+      content: "";
+      position: absolute;
+      top: 1px;
+      left: -1px;
+      width: 17px;
+      height: 17px;
+      background: #fff;
+      border-radius: 90px;
+      transition: 0.3s;
+    }
 
-		input:checked + label {
-			background: #bada55;
-		}
+    input:checked + label {
+      background-color: tomato;
+    }
 
-		input:checked + label:after {
-			right: calc(100% - 10px);
-			transform: translateX(-100%);
-		}
+    input:checked + label:after {
+      left: initial;
+      right: -1px;
+    }
 
-		label:active:after {
-			width: 120px;
-		}
-	}
+    label:active:after {
+      width: 36px;
+    }
+  }
 
-	.menu {
-		display: flex;
-		max-width: 200px;
-		min-width: 140px;
-		justify-content: space-between;
-		padding-left: 0;
-		margin-left: -25px;
+  .menu {
+    display: flex;
+    max-width: 200px;
+    min-width: 140px;
+    justify-content: space-between;
+    padding-left: 0;
 
-		li {
-			margin: 0 10px;
-			padding-left: 10px;
-		}
-	}
+    li {
+      margin: 0 10px;
+      padding-left: 10px;
+    }
+  }
 
-	.menu a {
-		color: #fff;
-		text-decoration: none;
-		border: none;
-		cursor: pointer;
+  .menu a {
+    color: #fff;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
 
-		&:hover {
-			background-color: transparent;
-			opacity: 0.8;
-		}
-	}
+    &:hover {
+      background-color: transparent;
+      opacity: 0.8;
+    }
+  }
 
-	.menu a::after {
-		content: "";
-		display: block;
-		width: 0;
-		height: 2px;
-		background: #fff;
-		pointer-events: none;
-	}
+  .menu a::after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #fff;
+    pointer-events: none;
+  }
 
-	.menu a.active {
-		font-weight: 500;
-	}
+  .menu a.active {
+    font-weight: 500;
+  }
 
-	.menu a.active::after {
-		width: 100%;
-	}
+  .menu a.active::after {
+    width: 100%;
+  }
 
-	.menu {
-		list-style: none;
-	}
+  .menu {
+    list-style: none;
+  }
 }
 
 @media all and (max-width: 480px) {
-	header .menu {
-		margin: 0 auto;
-		justify-content: space-between;
-		padding: 0;
+  header .menu {
+    margin: 0 auto;
+    justify-content: space-between;
+    padding: 0;
 
-		li {
-			font-size: 15px;
-		}
-	}
+    li {
+      font-size: 15px;
+    }
+  }
 }
