--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,194 +1,194 @@
 .about {
-	width: 100%;
-	display: flex;
-	align-items: center;
-	margin: 35px 0 50px;
-	border-radius: 6px;
-	padding: 10px 0;
-	color: #fff;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin: 35px 0 50px;
+  border-radius: 6px;
+  padding: 10px 0;
+  color: var(--color-primary);
 
-	.avatar {
-		width: 120px;
-		height: 120px;
-		border-radius: 50%;
-		border: 2px solid #ffffff;
-		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-	}
+  .avatar {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border: 2px solid var(--color-white);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
 
-	h1 {
-		margin: 0;
-		margin-bottom: 10px;
-	}
+  h1 {
+    margin: 0;
+    margin-bottom: 10px;
+  }
 
-	p {
-		margin: 0;
-	}
+  p {
+    margin: 0;
+  }
 
-	> div {
-		margin-top: 10px;
-		margin-left: 30px;
-	}
+  > div {
+    margin-top: 10px;
+    margin-left: 30px;
+  }
 
-	p a {
-		font-weight: 500;
-	}
+  p a {
+    font-weight: 500;
+  }
 
-	.social {
-		margin-top: 20px;
-		display: flex;
-	}
+  .social {
+    margin-top: 20px;
+    display: flex;
+  }
 
-	.social a {
-		border: 0;
-		width: 95px;
-		border-radius: 6px;
-		height: 35px;
-		display: flex;
-		align-items: center;
-		padding: 0 8px;
-		text-decoration: none;
-		font-size: 15px;
-		justify-content: center;
-		font-weight: 500;
+  .social a {
+    border: 0;
+    width: 95px;
+    border-radius: 6px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    padding: 0 8px;
+    text-decoration: none;
+    font-size: 15px;
+    justify-content: center;
+    font-weight: 500;
 
-		img {
-			margin-top: -1px;
-			margin-right: 7px;
-		}
+    img {
+      margin-top: -1px;
+      margin-right: 7px;
+    }
 
-		&:last-child {
-			color: #fff;
-			background-color: #000;
+    &:last-child {
+      color: #fff;
+      background-color: #000;
 
-			img {
-				margin-left: -1	px;
-			}
-		}
+      img {
+        margin-left: -1 px;
+      }
+    }
 
-		&:first-child {
-			margin-right: 20px;
-			background-color: #1da1f2;
-			color: #fff;
+    &:first-child {
+      margin-right: 20px;
+      background-color: #1da1f2;
+      color: #fff;
 
-			img {
-				margin-left: 0px;
-			}
-		}
+      img {
+        margin-left: 0px;
+      }
+    }
 
-		&:hover {
-			opacity: 0.9;
-		}
-	}
+    &:hover {
+      opacity: 0.9;
+    }
+  }
 
-	.social img {
-		width: 20px;
-		height: 20px;
-	}
+  .social img {
+    width: 20px;
+    height: 20px;
+  }
 
-	.social .github img {
-		width: 16px;
-	}
+  .social .github img {
+    width: 16px;
+  }
 }
 
 .about-me {
-	width: 100%;
-	margin-bottom: 50px;
+  width: 100%;
+  margin-bottom: 50px;
 
-	ul {
-		list-style: disc;
-		margin-bottom: 30px;
-	}
+  ul {
+    list-style: disc;
+    margin-bottom: 30px;
+  }
 
-	li span {
-		color: #3c4043;
-		font-weight: 500;
-	}
+  li span {
+    color: #3c4043;
+    font-weight: 500;
+  }
 
-	li a {
-		margin: 0 4px;
-	}
+  li a {
+    margin: 0 4px;
+  }
 }
 
 @media all and (max-width: 740px) and (min-width: 640px) {
-	.about {
-		font-size: 16px;
-	}
+  .about {
+    font-size: 16px;
+  }
 
-	.about .avatar {
-		width: 130px;
-		height: 130px;
-	}
+  .about .avatar {
+    width: 130px;
+    height: 130px;
+  }
 }
 
 @media all and (max-width: 640px) and (min-width: 480px) {
-	.about {
-		flex-direction: column;
-		padding: 10px;
-		font-size: 16px;
-	}
+  .about {
+    flex-direction: column;
+    padding: 10px;
+    font-size: 16px;
+  }
 
-	.social {
-		justify-content: center;
-	}
+  .social {
+    justify-content: center;
+  }
 
-	.about img {
-		margin-bottom: 0;
-	}
+  .about img {
+    margin-bottom: 0;
+  }
 
-	.about > div {
-		margin: 0;
-		padding: 0;
-	}
+  .about > div {
+    margin: 0;
+    padding: 0;
+  }
 
-	.about div {
-		text-align: center;
-	}
+  .about div {
+    text-align: center;
+  }
 
-	.about div h1 {
-		font-size: 21px;
-	}
+  .about div h1 {
+    font-size: 21px;
+  }
 
-	picture {
-		order: -1;
-	}
+  picture {
+    order: -1;
+  }
 
-	.about .avatar {
-		width: 130px;
-		height: 130px;
-	}
+  .about .avatar {
+    width: 130px;
+    height: 130px;
+  }
 }
 
 @media all and (max-width: 480px) {
-	.about {
-		flex-direction: column;
-		margin-top: 0;
+  .about {
+    flex-direction: column;
+    margin-top: 0;
 
-		.social {
-			justify-content: center;
-		}
+    .social {
+      justify-content: center;
+    }
 
-		div {
-			text-align: center;
-			margin: 0;
-			padding: 0;
-		}
+    div {
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
 
-		img {
-			margin-bottom: 0;
-		}
+    img {
+      margin-bottom: 0;
+    }
 
-		div h1 {
-			font-size: 21px;
-		}
+    div h1 {
+      font-size: 21px;
+    }
 
-		picture {
-			order: -1;
-		}
+    picture {
+      order: -1;
+    }
 
-		.avatar {
-			width: 110px;
-			height: 110px;
-			margin: 15px 0;
-		}
-	}
+    .avatar {
+      width: 110px;
+      height: 110px;
+      margin: 15px 0;
+    }
+  }
 }
