--- a/src/styles/book.scss
+++ b/src/styles/book.scss
@@ -1,26 +1,3 @@
-:root {
-  .light {
-    --color-dark: #000;
-    --color-black-border: #2f2f2f;
-    --color-primary: #000;
-    --color-primary-header-section: #fff;
-    --color-primary-bg-section: #4a5261;
-    --color-primary-footer: #4a5261;
-    --color-secondary-footer: #000;
-  }
-
-  .dark {
-    --color-dark: #1f1f1f;
-    --color-black-border: #2f2f2f;
-    --color-primary: #fff;
-    --color-primary-header-section: #000;
-    --color-primary-fqa: #000;
-    --color-primary-bg-section: #fff;
-    --color-primary-footer: #000;
-    --color-secondary-footer: #fff;
-  }
-}
-
 .book {
   --color-black-border: #2f2f2f;
   --color-grey: #f5f5f5;
@@ -53,7 +30,7 @@
 
   .header-section {
     padding-top: 20px;
-    background-color: var(--color-primary-header-section);
+    background-color: var(--color-black);
     display: grid;
     grid-gap: 1rem 2rem;
     align-items: center;
@@ -204,8 +181,8 @@
 
   section {
     padding: 15px 20px;
-
-    background-color: var(--color-primary-section);
+    border-top: 1px solid var(--color-secondary-line);
+    background-color: var(--color-primary-bg-section);
   }
 
   .learn-section {
@@ -228,7 +205,7 @@
   }
 
   .author-section {
-    background-color: var(--color-primary-header-section);
+    background-color: var(--color-primary-bg-section);
   }
 
   .author-section p {
@@ -260,7 +237,7 @@
   }
 
   .faq-section .container p {
-    color: var(--color-primary-section);
+    color: var(--color-primary-faq-section);
   }
 
   .faq-section h3 {
