--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -5,6 +5,7 @@
 :root {
   --font-family: "Helvetica", "Lato", "Open Sans", "sans-serif";
 
+  --color-primary-black: #1f1f1f;
   --color-white: #fff;
 
   .light {
@@ -18,6 +19,10 @@
     --color-secondary-color-newsletter: #4a5261;
     --color-primary-post-title: tomato;
     --color-primary-footer: #1c2129;
+    --color-black-border: #2f2f2f;
+    --color-primary-header-section: #fff;
+    --color-primary-bg-section: #f5f5f5;
+    --color-primary-faq-section: #4a5261;
   }
 
   .dark {
@@ -31,9 +36,12 @@
     --color-secondary-color-newsletter: #4a5261;
     --color-primary-post-title: tomato;
     --color-primary-footer: #1c2129;
+    --color-black-border: #2f2f2f;
+    --color-primary-header-section: #000;
+    --color-primary-faq-section: #fff;
+    --color-primary-faq: #000;
+    --color-primary-bg-section: #1f1f1f;
   }
-
-  --color-primary-black: #1f1f1f;
 }
 
 html,
