--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,7 +2,6 @@ footer {
   width: 100%;
   height: 45px;
   color: var(--color-white);
-  background-color: var(--color-primary-footer);
   border-top: 1px solid var(--color-secondary-line);
   overflow: hidden;
   display: flex;
@@ -31,9 +30,13 @@ footer {
     align-items: center;
   }
 
+  a {
+    color: var(--color-primary-link);
+    text-decoration: var(--color-primary-link) 1px underline;
+  }
+
   p i {
     font-size: 18px;
-    margin-top: 4px;
     margin-right: 6px;
   }
 
