--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,7 +1,7 @@
 footer {
   width: 100%;
   height: 45px;
-  color: var(--color-white);
+  color: var(--color-secondary-footer);
   border-top: 1px solid var(--color-secondary-line);
   overflow: hidden;
   display: flex;
