--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -24,6 +24,7 @@
   --color-primary-faq: #000;
   --color-primary-bg-section: #1f1f1f;
   --color-secondary-footer: #fff;
+  --color-tomato: tomato;
 }
 
 html,
