--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -29,6 +29,7 @@ header {
     min-width: 140px;
     justify-content: space-between;
     padding-left: 0;
+    font-size: 17px;
 
     li {
       margin: 0 10px;
