Update book image

--- a/src/styles/book.scss
+++ b/src/styles/book.scss
@@ -137,7 +137,7 @@
     font-weight: 600;
     padding: 0 15px;
     background-color: var(--color-blue) !important;
-    line-height: 48px;
+    line-height: 48px !important;
     text-align: center;
     background-image: none !important;
     text-transform: capitalize;
