--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "./opensources.scss";
 @import "./book.scss";
 @import "./posts.scss";
+@import "./sidebar.scss";
 @import "./newsletter.scss";
 @import "~prismjs/themes/prism-okaidia.css";
 @import "./overrides.scss";
